<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.dosis.AddDosisFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_primary">

        <ImageView
            android:id="@+id/np_icon_title"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_baseline_local_hospital_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/newdosis_title"
            android:textColor="@color/white"
            android:textSize="24dp"
            app:layout_constraintLeft_toRightOf="@id/np_icon_title"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/np_icon_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="80dp"
            android:minHeight="620dp"
            android:background="@drawable/welcome_btn"
            android:paddingHorizontal="20dp"
            android:paddingVertical="50dp"
            android:orientation="vertical">



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/np_input_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newdosis_form_names_hint"
                android:textColorHint="#7A7A76"
                android:layout_marginBottom="10dp"
                android:elevation="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/np_tit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray_unfocus"
                    android:maxLines="1"
                    android:textColor="#000000" />

            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnSelectDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:background="@drawable/register_btn_bg"
                    />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    tools:text="@tools:sample/date/ddmmyy"
                    android:textSize="16dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newdosis_form_Estado_hint"
                android:textColor="@color/black"/>
            <RadioGroup
                android:id="@+id/np_rg_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/np_rb_completado">


                <RadioButton
                    android:id="@+id/np_rb_completado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newdosis_form_Completo"
                    android:textColor="@color/black"
                    android:layout_marginRight="20dp"/>

                <RadioButton
                    android:id="@+id/np_rb_noCompletado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newdosis_form_No_Realizado"
                    android:textColor="@color/black"/>

            </RadioGroup>

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/np_fab_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_save_24"
            app:tint="@color/white"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>